--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-plus": "^1.0.2-beta.44",
     "nprogress": "^0.2.0",
     "spark-md5": "^3.0.1",
+    "uuid": "^8.3.2",
     "vue": "^3.0.5",
     "vue-router": "^4.0.6",
     "vuex": "^4.0.0"
